[gd_scene load_steps=20 format=3 uid="uid://b8031r7ess33k"]

[ext_resource type="Script" uid="uid://dsm5ftrt306io" path="res://scripts/levels/level_0.gd" id="1_hsw41"]
[ext_resource type="PackedScene" uid="uid://cbb2ytbvuoo7c" path="res://scenes/Icicle.tscn" id="2_auvjl"]
[ext_resource type="AudioStream" uid="uid://b87o6gx50qrn8" path="res://assets/audio/microdozeTheme0.wav" id="3_auvjl"]
[ext_resource type="Texture2D" uid="uid://b2v2alfch3m20" path="res://assets/freezer/snow.png" id="3_l5fl4"]
[ext_resource type="PackedScene" uid="uid://b7mu1034wh12b" path="res://scenes/Player.tscn" id="4_nx170"]
[ext_resource type="Script" uid="uid://13dfxerpiie1" path="res://scripts/camera_2d.gd" id="5_h27y2"]
[ext_resource type="FontFile" uid="uid://cwrp8r743gy5" path="res://assets/fonts/arcade.ttf" id="6_jkdna"]
[ext_resource type="PackedScene" uid="uid://b18aa8ui7s5jr" path="res://scenes/GameOver.tscn" id="7_d6wyi"]
[ext_resource type="PackedScene" uid="uid://bsdi5day054n2" path="res://scenes/HealthUI.tscn" id="8_bmjl8"]
[ext_resource type="PackedScene" uid="uid://chkrln0i73kui" path="res://scenes/projectile_ice_cube.tscn" id="9_6gnjo"]
[ext_resource type="PackedScene" uid="uid://cbp45nyhyledd" path="res://scenes/power_ups/HealthPowerUp.tscn" id="10_w1wr0"]
[ext_resource type="Texture2D" uid="uid://df3nmsirqvo2s" path="res://assets/freezer/frozen peas pixel.png" id="11_nhxcs"]
[ext_resource type="Texture2D" uid="uid://c4mjd12ou81kn" path="res://assets/freezer/twisted tea pixel.png" id="12_48n36"]
[ext_resource type="Texture2D" uid="uid://dxkmuhokaonh1" path="res://assets/freezer/milk_pixel.png" id="13_r8tyr"]
[ext_resource type="Texture2D" uid="uid://cgjobw0l58b34" path="res://assets/freezer/frozen pizza pixel.png" id="14_cyfud"]
[ext_resource type="Texture2D" uid="uid://3m0c0476ch80" path="res://assets/sprites/evil_lactose_free_ice_cream_pixel.png" id="15_k81si"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnx47"]
size = Vector2(407, 4215)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dtwl"]
size = Vector2(419, 4217)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0lbt8"]
size = Vector2(1108, 295.5)

[node name="Level0" type="Node2D"]
script = ExtResource("1_hsw41")
projectile_icicle = ExtResource("2_auvjl")

[node name="MicrodozeTheme0" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_auvjl")
volume_db = -13.507
autoplay = true

[node name="FloorSprite" type="Sprite2D" parent="."]
position = Vector2(519.5, 63.5)
scale = Vector2(1.61621, 3.47754)
texture = ExtResource("3_l5fl4")

[node name="FloorSprite2" type="Sprite2D" parent="."]
position = Vector2(559.724, -3443.01)
scale = Vector2(1.5982, 3.5)
texture = ExtResource("3_l5fl4")

[node name="Player" parent="." instance=ExtResource("4_nx170")]
position = Vector2(528, 900)
collision_mask = 1

[node name="Camera2D" type="Camera2D" parent="Player"]
script = ExtResource("5_h27y2")

[node name="OnBounceLabel" type="Label" parent="Player"]
offset_left = -137.0
offset_top = 66.0
offset_right = 154.0
offset_bottom = 616.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_jkdna")
theme_override_font_sizes/font_size = 75
text = "press shift"
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="OhNoLabel" type="Label" parent="Player"]
offset_left = -143.0
offset_right = -11.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_jkdna")
theme_override_font_sizes/font_size = 40
text = "OH NO!"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GameOver" parent="HUD" instance=ExtResource("7_d6wyi")]
process_mode = 3
visible = false

[node name="HealthUI" parent="HUD" instance=ExtResource("8_bmjl8")]
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.18281
offset_left = 20.0
offset_top = -230.003
offset_bottom = -254.0
grow_vertical = 0
scale = Vector2(0.436, 0.436)
metadata/_edit_use_anchors_ = true

[node name="LeftWall" type="StaticBody2D" parent="."]
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(190.5, -565)
shape = SubResource("RectangleShape2D_qnx47")

[node name="RightWall" type="StaticBody2D" parent="."]
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(889.5, -565)
shape = SubResource("RectangleShape2D_7dtwl")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(540, 1400)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("RectangleShape2D_0lbt8")

[node name="IceCubeBarrier1" type="Node2D" parent="."]

[node name="ProjectileIceCube4" parent="IceCubeBarrier1" instance=ExtResource("9_6gnjo")]
position = Vector2(441, 60)

[node name="ProjectileIceCube5" parent="IceCubeBarrier1" instance=ExtResource("9_6gnjo")]
position = Vector2(535, 60)

[node name="ProjectileIceCube6" parent="IceCubeBarrier1" instance=ExtResource("9_6gnjo")]
position = Vector2(630, 60)

[node name="IceCubeBarrier2" type="Node2D" parent="."]

[node name="ProjectileIceCube4" parent="IceCubeBarrier2" instance=ExtResource("9_6gnjo")]
position = Vector2(441, -1000)

[node name="ProjectileIceCube5" parent="IceCubeBarrier2" instance=ExtResource("9_6gnjo")]
position = Vector2(535, -1000)
powerup_scene = ExtResource("10_w1wr0")
powerup_drop_chance = 1.0

[node name="ProjectileIceCube6" parent="IceCubeBarrier2" instance=ExtResource("9_6gnjo")]
position = Vector2(630, -1000)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
clip_contents = false
offset_left = 385.0
offset_top = 1246.0
offset_right = 685.0
offset_bottom = 1896.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_jkdna")
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
text = "use
[img=200]res://assets/ui/arrow_keys.png[/img] 
to move"
fit_content = true
scroll_active = false
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FrozenPeasPixel" type="Sprite2D" parent="."]
position = Vector2(106.5, 923)
scale = Vector2(0.782552, 0.692708)
texture = ExtResource("11_nhxcs")

[node name="TwistedTeaPixel" type="Sprite2D" parent="."]
position = Vector2(967.177, 735.601)
rotation = 1.30725
scale = Vector2(1.01747, 0.958704)
texture = ExtResource("12_48n36")

[node name="MilkPixel" type="Sprite2D" parent="."]
position = Vector2(16, -164)
rotation = -0.174533
scale = Vector2(0.3832, 0.31104)
texture = ExtResource("13_r8tyr")

[node name="FrozenPizzaPixel" type="Sprite2D" parent="."]
position = Vector2(1110, -1081)
scale = Vector2(1.98837, 1.66505)
texture = ExtResource("14_cyfud")

[node name="EvilLactoseFreeIceCreamPixel" type="Sprite2D" parent="."]
position = Vector2(524, -1732)
scale = Vector2(1.40714, 1.30253)
texture = ExtResource("15_k81si")

[node name="EvilLabel" type="Label" parent="EvilLactoseFreeIceCreamPixel"]
offset_left = -252.285
offset_top = 146.638
offset_right = 279.715
offset_bottom = 231.305
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_jkdna")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
